# grand-secretariat

./: .gitignore  .htpasswd  CLAUDE.md  LICENSE  README.md  buf.gen.yaml  docker-compose.prod.yml  docker-compose.yaml  nginx.conf  pyproject.toml
.github/workflows/: deploy.yml
docs/: DEPLOYMENT.md  PRODUCT_SPEC.md  TECHNICAL_PLAN.md  TECH_DESIGN.md  TEST_FEEDBACK_QUEUE.md
docs/proposals/: AGENTIC_GROUP_MODE.md  CHAT_STYLE_FEATURE.md  PRODUCTIVITY_TOOLING.md  VOTING_POLLING_FEATURE.md
libs/common/: pyproject.toml
libs/common/src/common/: __init__.py  logging.py
libs/pb/: pyproject.toml
proto/pb/api/chat/: chat.proto
proto/pb/shared/: content.proto
scripts/: dev.sh  ec2-setup.sh
scripts/openrouter-test/: pyproject.toml
services/chat/: Dockerfile  config.yaml  pyproject.toml
services/chat/src/chat/: main.py
services/chat/src/chat/config/: config.py
services/chat/src/chat/providers/: openrouter.py
services/chat/src/chat/server/: service.py
services/gateway/: CLAUDE.md  Dockerfile  README.md  config.yaml  pyproject.toml
services/gateway/src/gateway/: __init__.py  config.py  converters.py  main.py  models.py
services/gateway/src/gateway/routers/: __init__.py  chat.py  models.py  rooms.py
services/gateway/src/gateway/websockets/: __init__.py  chat.py  room.py
services/room/: CLAUDE.md  Dockerfile  config.yaml  pyproject.toml
services/room/src/room/: config.py  llm_dispatcher.py  main.py  registry.py  service.py  session.py  store.py
web/: .gitignore  Dockerfile  QUICKSTART.md  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
web/app/: globals.css  layout.tsx  page.tsx
web/app/components/: ChatInput.tsx  ModelPanel.tsx  RoomCreateForm.tsx
web/app/hooks/: useRoomSocket.ts  useWebSocket.ts
web/app/lib/: api.ts  storage.ts  utils.ts
web/app/rooms/: page.tsx
web/app/styleguide/: page.tsx
(+26 files in other folders)
